# feed-service/openapi.yaml
@@ -20,7 +20,7 @@ paths:
                   in: query
                   schema:
                     type: string
-                - name: lastTime
+                - name: offset
                   in: query
                   schema:
                     type: string
@@ -105,6 +105,90 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.RegisterReply'
+    /api/video:
+        get:
+            tags:
+                - VideoService
+            description: 获取用户视频列表
+            operationId: VideoService_ListUserVideos
+            parameters:
+                - name: userId
+                  in: query
+                  schema:
+                    type: string
+                - name: token
+                  in: query
+                  schema:
+                    type: string
+                - name: refreshToken
+                  in: query
+                  schema:
+                    type: string
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: startTime
+                  in: query
+                  schema:
+                    type: string
+                    format: date-time
+                - name: endTime
+                  in: query
+                  schema:
+                    type: string
+                    format: date-time
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/video.ListUserVideosReply'
+    /api/video/create:
+        post:
+            tags:
+                - VideoService
+            description: 上传视频信息
+            operationId: VideoService_CreateVideo
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/video.CreateVideoRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/video.CreateVideoReply'
+    /api/video/upload:
+        post:
+            tags:
+                - VideoService
+            description: 上传视频
+            operationId: VideoService_UploadVideo
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/video.UploadVideoRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/video.UploadVideoReply'
     /helloworld/{name}:
         get:
             tags:
@@ -142,7 +226,7 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/feed.Video'
-                nextTime:
+                nextOffset:
                     type: string
         feed.Video:
             type: object
@@ -259,8 +343,149 @@ components:
                     type: string
                 user:
                     $ref: '#/components/schemas/user.User'
+        video.CreateVideoReply:
+            type: object
+            properties:
+                videoId:
+                    type: string
+        video.CreateVideoRequest:
+            type: object
+            properties:
+                title:
+                    type: string
+                description:
+                    type: string
+                playUrl:
+                    type: string
+                coverUrl:
+                    type: string
+                duration:
+                    type: number
+                    format: float
+                tags:
+                    type: string
+                isPublic:
+                    type: boolean
+                isOriginal:
+                    type: boolean
+                sourceUrl:
+                    type: string
+                token:
+                    type: string
+                refreshToken:
+                    type: string
+            description: 创建视频信息
+        video.ListUserVideosReply:
+            type: object
+            properties:
+                videos:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/video.Video'
+                total:
+                    type: integer
+                    format: int32
+                currentPage:
+                    type: integer
+                    format: int32
+                pageSize:
+                    type: integer
+                    format: int32
+        video.UploadVideoReply:
+            type: object
+            properties:
+                playUrl:
+                    type: string
+                coverUrl:
+                    type: string
+                duration:
+                    type: number
+                    format: float
+                message:
+                    type: string
+                videoId:
+                    type: string
+        video.UploadVideoRequest:
+            type: object
+            properties:
+                data:
+                    type: string
+                    format: bytes
+                filename:
+                    type: string
+                token:
+                    type: string
+                refreshToken:
+                    type: string
+            description: 上传视频
+        video.Video:
+            type: object
+            properties:
+                id:
+                    type: string
+                userId:
+                    type: string
+                playUrl:
+                    type: string
+                coverUrl:
+                    type: string
+                title:
+                    type: string
+                description:
+                    type: string
+                duration:
+                    type: number
+                    format: float
+                tags:
+                    type: string
+                favoriteCnt:
+                    type: integer
+                    format: int32
+                commentCnt:
+                    type: integer
+                    format: int32
+                shareCnt:
+                    type: integer
+                    format: int32
+                collectCnt:
+                    type: integer
+                    format: int32
+                isPublic:
+                    type: boolean
+                auditStatus:
+                    type: integer
+                    format: int32
+                isOriginal:
+                    type: boolean
+                sourceUrl:
+                    type: string
+                transcodeStatus:
+                    type: integer
+                    format: int32
+                videoWidth:
+                    type: integer
+                    format: int32
+                videoHeight:
+                    type: integer
+                    format: int32
+                bizExt:
+                    type: string
+                reserved1:
+                    type: string
+                reserved2:
+                    type: string
+                createdAt:
+                    type: string
+                    format: date-time
+                updateTime:
+                    type: string
+                    format: date-time
+                deleteAt:
+                    type: string
+                    format: date-time
 tags:
     - name: FeedService
     - name: Greeter
       description: The greeting service definition.
     - name: UserService
+    - name: VideoService
